@@ -23,15 +23,21 @@ import com.github.javydreamercsw.management.domain.wrestler.Wrestler;
 import com.github.javydreamercsw.management.service.segment.SegmentService;
 import com.github.javydreamercsw.management.service.wrestler.WrestlerService;
 import com.github.javydreamercsw.management.ui.view.MainLayout;
+import com.vaadin.flow.component.button.Button;
+import com.vaadin.flow.component.combobox.MultiSelectComboBox;
 import com.vaadin.flow.component.html.H2;
 import com.vaadin.flow.component.html.H3;
 import com.vaadin.flow.component.html.Paragraph;
+import com.vaadin.flow.component.notification.Notification;
 import com.vaadin.flow.component.orderedlayout.VerticalLayout;
+import com.vaadin.flow.component.textfield.TextArea;
 import com.vaadin.flow.router.BeforeEnterEvent;
 import com.vaadin.flow.router.BeforeEnterObserver;
 import com.vaadin.flow.router.PageTitle;
 import com.vaadin.flow.router.Route;
 import jakarta.annotation.security.PermitAll;
+import java.util.ArrayList;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -48,6 +54,8 @@ public class MatchView extends VerticalLayout implements BeforeEnterObserver {
   private final WrestlerService wrestlerService;
   private final SecurityUtils securityUtils;
   private Segment segment;
+  private TextArea narrationArea;
+  private MultiSelectComboBox<Wrestler> winnersComboBox;
 
   @Autowired
   public MatchView(
@@ -92,11 +100,10 @@ public class MatchView extends VerticalLayout implements BeforeEnterObserver {
 
     add(new H3("Participants"));
     List<Wrestler> opponents =
-        segment.getWrestlers().stream()
-            .filter(w -> !w.equals(playerWrestler))
-            .collect(Collectors.toList());
+        segment.getWrestlers().stream().filter(w -> !w.equals(playerWrestler)).toList();
 
     add(new Paragraph("Your Wrestler: " + playerWrestler.getName()));
+    add(createPlayerSummary(playerWrestler));
     add(
         new Paragraph(
             "Opponents: "
@@ -120,6 +127,41 @@ public class MatchView extends VerticalLayout implements BeforeEnterObserver {
     } else {
       segment.getTitles().forEach(title -> add(new Paragraph("- " + title.getName())));
     }
+
+    add(new H3("Match Winners"));
+    winnersComboBox = new MultiSelectComboBox<>();
+    winnersComboBox.setItems(segment.getWrestlers());
+    winnersComboBox.setItemLabelGenerator(Wrestler::getName);
+    winnersComboBox.setValue(new HashSet<>(segment.getWinners()));
+    winnersComboBox.setId("winners-combobox");
+    add(winnersComboBox);
+
+    Button saveWinnersButton = new Button("Save Winners", event -> saveWinners());
+    saveWinnersButton.setId("save-winners-button");
+    add(saveWinnersButton);
+
+    add(new H3("Match Narration"));
+    narrationArea = new TextArea();
+    narrationArea.setWidthFull();
+    narrationArea.setValue(segment.getNarration() == null ? "" : segment.getNarration());
+    narrationArea.setId("narration-area");
+    add(narrationArea);
+
+    Button saveButton = new Button("Save Narration", event -> saveNarration());
+    saveButton.setId("save-narration-button");
+    add(saveButton);
+  }
+
+  private void saveWinners() {
+    segment.setWinners(new ArrayList<>(winnersComboBox.getValue()));
+    segmentService.updateSegment(segment);
+    Notification.show("Winners saved!");
+  }
+
+  private void saveNarration() {
+    segment.setNarration(narrationArea.getValue());
+    segmentService.updateSegment(segment);
+    Notification.show("Narration saved!");
   }
 
   private VerticalLayout createOpponentSummary(Wrestler opponent) {
@@ -140,6 +182,34 @@ public class MatchView extends VerticalLayout implements BeforeEnterObserver {
       summary.add(new Paragraph("No current injuries."));
     } else {
       opponentWithInjuries
+          .getInjuries()
+          .forEach(
+              injury -> {
+                summary.add(new Paragraph("- " + injury.getDisplayString()));
+              });
+    }
+
+    return summary;
+  }
+
+  private VerticalLayout createPlayerSummary(Wrestler player) {
+    VerticalLayout summary = new VerticalLayout();
+    summary.add(new H3("Your Summary: " + player.getName()));
+
+    Optional<WrestlerStats> stats = wrestlerService.getWrestlerStats(player.getId());
+    if (stats.isPresent()) {
+      WrestlerStats wrestlerStats = stats.get();
+      summary.add(new Paragraph("Wins: " + wrestlerStats.getWins()));
+      summary.add(new Paragraph("Losses: " + wrestlerStats.getLosses()));
+    }
+
+    Wrestler playerWithInjuries = wrestlerService.findByIdWithInjuries(player.getId()).get();
+
+    summary.add(new Paragraph("Bumps: ".concat(String.valueOf(playerWithInjuries.getBumps()))));
+    if (playerWithInjuries.getInjuries().isEmpty()) {
+      summary.add(new Paragraph("No current injuries."));
+    } else {
+      playerWithInjuries
           .getInjuries()
           .forEach(
               injury -> {
